default/objects/LiveChatTranscript/LiveChatTranscript.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>