default/objects/LiveChatTranscript/fields/Chat_Topic__c.field-meta.xml
<CustomField>
    <fullName>Chat_Topic__c</fullName>
    <label>Chat Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact details</fullName>
            </value>
            <value>
                <fullName>Company details</fullName>
            </value>
            <value>
                <fullName>Credit scoring</fullName>
            </value>
            <value>
                <fullName>Card configuration</fullName>
            </value>
            <value>
                <fullName>Price list</fullName>
            </value>
            <value>
                <fullName>Special offers + VAS</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Card delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>