default/objects/LiveChatTranscript/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>