default/objects/LiveChatTranscript/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>