default/objects/LiveChatTranscript/fields/E2E_Step__c.field-meta.xml
<CustomField>
    <fullName>E2E_Step__c</fullName>
    <label>E2E Step</label>
    <length>100</length>
    <type>Text</type>
</CustomField>