default/objects/LiveChatTranscript/fields/GFN__c.field-meta.xml
<CustomField>
    <fullName>GFN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GFN</label>
    <referenceTo>ERP__c</referenceTo>
    <relationshipLabel>Chat Transcripts</relationshipLabel>
    <relationshipName>Chat_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>