default/objects/LiveChatTranscript/fields/Mode_of_initialization__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_initialization__c</fullName>
    <label>Mode of initialization</label>
    <length>40</length>
    <type>Text</type>
</CustomField>