default/objects/LiveChatTranscript/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Problem solved</fullName>
            </value>
            <value>
                <fullName>Swich to manual</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>