default/objects/LiveChatTranscript/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>