default/objects/LiveChatTranscript/listViews/e2eChatAT_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>e2eChatAT_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>e2eChatAT</label>
    <queue>e2eChatAT</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>