default/objects/LiveChatTranscript/listViews/e2eChatCHDE_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>e2eChatCHDE_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>e2eChatCHDE</label>
    <queue>e2eChatCHDE</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>