default/objects/LiveChatTranscript/listViews/e2eChatCHFR_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>e2eChatCHFR_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>e2eChatCHFR</label>
    <queue>e2eChatCHFR</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>