default/objects/LiveChatTranscript/listViews/e2eChatPL_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>e2eChatPL_LiveChatTranscript</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>E2E_Step__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Poland</value>
    </filters>
    <label>e2eChatPL</label>
    <language>en_US</language>
    <sharedTo>
        <role>Salesteam_Inbound_2</role>
    </sharedTo>
</ListView>