default/objects/LiveChatTranscript/listViews/e2eOfflineChatAT_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>e2eOfflineChatAT_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>e2eOfflineChatAT</label>
    <queue>e2eOfflineChatAT</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>