default/objects/LiveChatTranscript/listViews/e2eOfflineChatCHDE_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>e2eOfflineChatCHDE_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>e2eOfflineChatCHDE</label>
    <queue>e2eOfflineChatCHDE</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>